--- a/PureEdgeSim/settings/simulation_parameters.properties
+++ b/PureEdgeSim/settings/simulation_parameters.properties
@@ -1,18 +1,18 @@
 # Simulation Parameters File
 
 # Simulation time in minutes
-simulation_time=10
+simulation_time=300
 # to launch simulation runs in parallel
 parallel_simulation=false
 # Update interval (in seconds, used for mobility) set it between 0.1 and 1 (Higher value = low simulation time. Lower value= higher accuracy).
-update_interval=1
+update_interval=0.5
 # Pause length between iterations (in seconds)
 pause_length=3
 
 # Display real time charts
 display_real_time_charts=true
 # Close charts when simulation ends 
-auto_close_real_time_charts=true
+auto_close_real_time_charts=false
 # Real-time charts refresh interval
 charts_update_interval=30
 # Save charts as bitmap files
@@ -37,7 +37,7 @@ edge_datacenters_coverage=200
 enable_registry=false
 
 # CLOUD = default location, you can mirror the container elsewhere programmatically by extending the defaultNetworkModel  
-registry_mode=CACHE
+registry_mode=CLOUD
 
 # When enabled, tasks will be sent to a another device/server to make the offloading decisions. When diabled, each device makes its own offloading decisions.
 enable_orchestrators=false
@@ -62,27 +62,33 @@ clear_output_folder=false
 deep_log_enabled=false
 
 # Edge devices count
-min_number_of_edge_devices=100
-max_number_of_edge_devices=300
-edge_device_counter_size=100
+min_number_of_edge_devices=128
+max_number_of_edge_devices=128
+edge_device_counter_size=1
 
 # Enabling this will give more accurate results, but also will increase the simulation duration.
 realistic_network_model=false
 
 # Network update interval in seconds ( 0.1 to 1= better accuracy but it takes longer, 2 or more = less details but faster simulation)
 # Default=1 (to minimize simulation time).
-network_update_interval=1
+network_update_interval=0.5
 
 # If true, all data transferred to the cloud will pass through the same wan link and share the same bandwidth, 
 # this can be needed in some scenarios. This also may cause many tasks to fail due to latency (depending on the WAN bandwidth). 
 # When disabled, the the WAN real-time chart will not be displayed.
 one_shared_wan_network = true
 
+# If true, the tasks bandwidth allocation is based on their associated application latency or cpu utilization
+bandwidth_allocation_based_on_application_type = false
+# Set the value for bandwidth allocation
+# Options: LATENCY, MI
+Allocation_value = LATENCY
+
 # Network settings   (courtesy of LEAF Simulator)
 # Latency is used to determine shortest path when rooting + used to determine if tasks have failed due to high latency
 # Bandwidths in megabits per seconds (Mbps)
 # WAN settings
-wan_bandwidth = 20
+wan_bandwidth = 10000
 wan_latency = 0.06
 wan_nanojoules_per_bit = 46.7 
 
@@ -90,13 +96,17 @@ man_bandwidth = 1000
 man_latency = 0.01
 man_nanojoules_per_bit = 0 
 
+Fiber_bandwidth = 10000
+Fiber_latency = 0.01
+Fiber_nanojoules_per_bit = 46.7
+
 # WiFi settings
-wifi_bandwidth = 1300
+wifi_bandwidth = 10000
 wifi_device_transmission_nanojoules_per_bit = 283.17
 wifi_device_reception_nanojoules_per_bit = 137.01
 wifi_access_point_transmission_nanojoules_per_bit = 23.8
 wifi_access_point_reception_nanojoules_per_bit = 23.8
-wifi_latency = 0.005
+wifi_latency = 0.001
 
 # Ethernet settings
 ethernet_bandwidth = 1000
@@ -114,7 +124,7 @@ cellular_latency = 0.03
 # Task orchestration settings 
 # The used architectures, use ',' for multiple values
 # Options: CLOUD_ONLY,EDGE_ONLY,MIST_ONLY,MIST_AND_CLOUD,EDGE_AND_CLOUD,MIST_AND_EDGE,ALL 
-orchestration_architectures = CLOUD_ONLY,EDGE_ONLY,MIST_ONLY,MIST_AND_CLOUD,EDGE_AND_CLOUD,MIST_AND_EDGE,ALL 
+orchestration_architectures = EDGE_ONLY
 
 # The orchestration algorithm, use ',' for multiple values  
-orchestration_algorithms = TRADE_OFF,ROUND_ROBIN
+orchestration_algorithms = TRADE_OFF
