--- a/PureEdgeSim/settings/simulation_parameters.properties
+++ b/PureEdgeSim/settings/simulation_parameters.properties
@@ -20,15 +20,15 @@ save_charts=true
 
 # simulation area/map (meters) 
 # Remember to update the edge data centers location when you change the map size (in the edge_datacenters.xml file)
-length=200
-width=200
+length=2000
+width=2000
 
 # Network range (meters): the distance (radius) in which two devices (or a device and an edge data center) can offload to each others. 
 # When a mobile device moves, if it quits this range, the task will be considered as failed due to mobility.
-edge_devices_range=10
+edge_devices_range=1000
 # Be carefull when setting the edge data centers coverage area when the EDGE_ONLY architecture is used, as some tasks may fail (because no resources found)
 # so be sure that edge servers cover all the map, except if your scenario requires low coverage area.
-edge_datacenters_coverage=200
+edge_datacenters_coverage=2000
 
 # Enable registry 
 # true : means that the device will download the application from the registry 
@@ -40,10 +40,10 @@ enable_registry=false
 registry_mode=CLOUD
 
 # When enabled, tasks will be sent to a another device/server to make the offloading decisions. When diabled, each device makes its own offloading decisions.
-enable_orchestrators=false
+enable_orchestrators=true
 # deploy the orchestration node (Options: CLOUD, EDGE, or MIST, you can select any computing node programmatically by calling the setAsOrchestrator() method in DefaultComputingNode.java)  
 # Edge means that every edge device orchestrates its tasks for itself  
-deploy_orchestrator=CLOUD
+deploy_orchestrator=EDGE
 
 # Whether to stop the simulation when the time ends or wait to all the tasks to get executed.
 # It is better to wait for all the tasks to get executed to get better results, however, in certain scenarios, this may takes hours.
@@ -62,8 +62,8 @@ clear_output_folder=false
 deep_log_enabled=false
 
 # Edge devices count
-min_number_of_edge_devices=128
-max_number_of_edge_devices=128
+min_number_of_edge_devices=50
+max_number_of_edge_devices=50
 edge_device_counter_size=1
 
 # Enabling this will give more accurate results, but also will increase the simulation duration.
@@ -88,16 +88,16 @@ Allocation_value = LATENCY
 # Latency is used to determine shortest path when rooting + used to determine if tasks have failed due to high latency
 # Bandwidths in megabits per seconds (Mbps)
 # WAN settings
-wan_bandwidth = 10000
+wan_bandwidth = 1000
 wan_latency = 0.06
 wan_nanojoules_per_bit = 46.7 
 
 man_bandwidth = 1000
 man_latency = 0.01
-man_nanojoules_per_bit = 0 
+man_nanojoules_per_bit = 0
 
 Fiber_bandwidth = 10000
-Fiber_latency = 0.01
+Fiber_latency = 0.001
 Fiber_nanojoules_per_bit = 46.7
 
 # WiFi settings
@@ -110,7 +110,7 @@ wifi_latency = 0.001
 
 # Ethernet settings
 ethernet_bandwidth = 1000
-ethernet_nanojoules_per_bit = 40000
+ethernet_nanojoules_per_bit = 40
 ethernet_latency = 0.002
 
 # The mobile telecommunication network/ cellular settings (in this case 4g LTE)
@@ -128,3 +128,9 @@ orchestration_architectures = EDGE_ONLY
 
 # The orchestration algorithm, use ',' for multiple values  
 orchestration_algorithms = TRADE_OFF
+
+# Coordinates for data centers
+dc1_x_pos= 10
+dc1_y_pos= 10
+dc2_x_pos= 1995
+dc2_y_pos= 1995
