--- a/PureEdgeSim/settings/simulation_parameters.properties
+++ b/PureEdgeSim/settings/simulation_parameters.properties
@@ -84,6 +84,10 @@ bandwidth_allocation_based_on_application_type = false
 # Options: LATENCY, MI
 Allocation_value = LATENCY
 
+# Indicate the type of architecture: GENIO or BASELINE
+Architecture = GENIO
+
+
 # Network settings   (courtesy of LEAF Simulator)
 # Latency is used to determine shortest path when rooting + used to determine if tasks have failed due to high latency
 # Bandwidths in megabits per seconds (Mbps)
